updated menu structure and added donate button

--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -32,16 +32,13 @@
           <a href="/">About JGC</a>
           <ul>
             <li>
-              <a href="#aa">Mission</a>
-            </li>
-            <li class="current">
-              <a href="#ab">Principles</a>
+              <a href="#aa">Mission & Principles</a>
             </li>
             <li>
               <a href="#ab">John W. Gardner</a>
             </li> 
             <li class="current">
-              <a href="#ab">Team</a>
+              <a href="#ab">Our Team</a>
             </li>
             <li class="current">
               <a href="#ab">At Stanford</a>
@@ -106,13 +103,15 @@
           <a href="#ab">Resources</a>
           <ul>
             <li><a href="#">Publications</a></li>
-            <li><a href="#">Applications</a></li>
-            <li><a href="#">Toolkits</a></li>
+            <li><a href="#">Tools</a></li>
             <li><a href="#aba">Presentations</a></li>
             <li><a href="#abb">Links</a></li>
           </ul>
         </li>
       </ul>
+      <span id="donate-button">
+        <a href="#"><img src="/images/nav_donate.jpg"></a>
+      </span>
     </div>
 
     <br clear="all">
