--- a/content-base.html
+++ b/content-base.html
@@ -16,13 +16,13 @@ document.createElement("article" );
 <!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
-  <!--#include virtual="content-head.html" -->
+  <!--#include virtual="/content-head.html" -->
 </head>
 
 <body>
-<!--#include virtual="content-menu-top.html" -->
+<!--#include virtual="/content-menu-top.html" -->
 <!--#include virtual="content-example.html" -->
-<!--#include virtual="content-footer.html" -->
-<!--#include virtual="content-analytics.html" -->
+<!--#include virtual="/content-footer.html" -->
+<!--#include virtual="/content-analytics.html" -->
 </body>
 </html>
