--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -110,7 +110,7 @@
         </li>
       </ul>
       <span id="donate-button">
-        <a href="#"><img src="/images/nav_donate.jpg"></a>
+        <a href="#"><img src="/images/nav_donate2.jpg"></a>
       </span>
     </div>
 
