--- a/content-head.html
+++ b/content-head.html
@@ -19,7 +19,7 @@
   <!--  Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="/favicon.ico">
 
   <!-- CSS : implied media="all" -->
   <link rel="stylesheet" href="/css/style.css?v=300">
