increase menu size and make all superfish and sub_menu adjustments accordingly.  All column, header and linked header stylings for Angela

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -1,12 +1,14 @@
     <div id="jgc-content">
 
       <div id="jgc-content-features">
-
+        
         <div class="jgc-content-feature-item-left">
+	  <div class="column-outer">
+   	    <div class="column-inner-box">
 
-          <h1 class="content-text-header">Milbrey McLaughlin</h1>
+          <a class="header-link" href="#">Milbrey McLaughlin</a>
 	  <p>Founding Director</p>
-	  <p>Stanford University David Jacks Professor of Education & Public Policy</p>
+	  <p>Stanford University David Jacks Professor of Education & Public Policy at Stanford</p>
 	  <p><a href="mailto:milbrey@stanford.edu">milbrey@stanford.edu</a></p>
 	  <br>
 
@@ -79,6 +81,10 @@
 	  <p>Policy Analyst</p>
 	  <p><a href="mailto:ihorwitz@stanford.edu">ihorwitz@stanford.edu</a></p>
           <br>
+
+            </div>
+   	    <div class="column-inner-box">
+	  
 
   	  <h1 class="content-text-header">Dara Kosberg</h1>
 	  <p>POLS Intern</p>
@@ -154,12 +160,9 @@
 	  <p>Graduate Research Assistant</p>
 	  <p><a href="mailto:betsyw@stanford.edu">betsyw@stanford.edu</a></p>
           <br>
+             </div>
+           </div>
 
-
-         </div>
-
-        <div class="jgc-content-feature-item-right">
-           Content you want on the right goes here.<br>
          </div>
 
        </div>
