added short-rule for hr

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -8,7 +8,7 @@
 
           <a class="header-link" href="#">Milbrey McLaughlin</a>
 	  <p>Founding Director</p>
-	  <p>Stanford University David Jacks Professor of Education & Public Policy at Stanford</p>
+	  <p>David Jacks Professor of Education & Public Policy at Stanford</p>
 	  <p><a href="mailto:milbrey@stanford.edu">milbrey@stanford.edu</a></p>
 	  <br>
 
