--- a/about_jgc/content-contact.html
+++ b/about_jgc/content-contact.html
@@ -3,6 +3,8 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
+
+		<h1 class="title-page-header-big"> CONTACT US </h1><br>
           	<h1 class="content-text-header">John W. Gardner Center for Youth and Their Communities (JGC)</h1>
 		Stanford University School of Education<br>
 		505 Lasuen Mall<br>
@@ -12,9 +14,10 @@
 		<span class="content-bold">Phone:</span> (650) 723-1137<br>
 		<span class="content-bold">Fax:</span>  (650) 736-7160<br>
 		<br>
-		<h1 class="content-text-header"><a href="team.html">JGC Staff Directory</a></h1>
+		<a class="header-link" href="team.html">JGC Staff Directory</a>
 		<br>
-		<h1 class="content-text-header"><a href="directions.html">Directions & Parking</a></h1>
+		<br>
+		<a class="header-link" href="directions.html">Directions & Parking</a>
 		<br>
 				
          </div>
