Added some more styling, including a right-hand nav box and also adding some directories added by Angela

--- a/about_jgc/content-jwg.html
+++ b/about_jgc/content-jwg.html
@@ -3,8 +3,13 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
+
+
+     	   <h1 class="title-page-header-big">John W. Gardner</h1>
+	   <br>
            <h1 class="content-text-header">The Man Behind Our Mission</h1>
-<p>John W. Gardner (1912-2002) was a renowned activist who promoted the common good and improved the lives of millions. As President Lyndon Johnson’s Secretary of Health, Education and Welfare, Gardner was actively involved in civil rights enforcement, led the creation of Medicare, and helped establish the public television network. More broadly, his work focused on the elimination of poverty and racial injustice.</p>
+	   <p>John W. Gardner (1912-2002) was a renowned activist who promoted the common good and improved the lives of millions. As 	
+President Lyndon Johnson’s Secretary of Health, Education and Welfare, Gardner was actively involved in civil rights enforcement, led the creation of Medicare, and helped establish the public television network. More broadly, his work focused on the elimination of poverty and racial injustice.</p>
 <br>
 
 <h1 class="content-text-header">A Lifetime of Achievement</h1>
@@ -17,3 +22,6 @@
       
 
        </div>
+
+
+
