--- a/about_jgc/content-mission.html
+++ b/about_jgc/content-mission.html
@@ -3,6 +3,10 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
+	
+	   <h1 class="title-page-header-big">Mission and Principles</h1>
+	   <br>
+
            <h1 class="content-text-header">Mission</h1>
 		<p>The John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University partners with 			communities to develop leadership, conduct research and effect change to improve the lives of youth.</p>
 		<br>
