new home graphic

--- a/partners/content-local.html
+++ b/partners/content-local.html
@@ -249,15 +249,15 @@ A B C D E F G <a href="#H">H</a> I J K L M N O <a href="#P">P</a> Q R <a href="#
 <br>
 <ul>
 <li><a href="/our_work/foster_youth.html" target="_blank">Educational Outcomes of Dependent Youth</a></li>
-<li><a href="/our_work/foster_youth.html" target="_blank">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
+<li><a href="/our_work/truancy.html" target="_blank">Truancy and Early Chronic Absenteeism in Redwood City</a></li>
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.smcoe.k12.ca.us/" target="_blank">San Mateo County Office of Education</a><br>
+<a  href=" http://www.smcoe.k12.ca.us/" target="_blank">San Mateo County Office of Education</a><br>
 <p>The County Office of Education is an educational service agency serving all 24 school districts in San Mateo County. It provides a variety of instructional, business, and consulting services which enhance the ability of districts to provide quality education. The office serves as an intermediate link between the California Department of Education and local districts, demonstrating educational leadership in the County and State, and working with public and private agencies for the benefit of public education.</p>
 <br>
 <ul>
-<li><a href="/our_work/foster_youth.html" target="_blank">Preschool for All</a> </li>
+<li><a href="/our_work/pfa.html" target="_blank">Preschool for All</a> </li>
 </ul>
 <br>
 
@@ -290,7 +290,7 @@ A B C D E F G <a href="#H">H</a> I J K L M N O <a href="#P">P</a> Q R <a href="#
 <p>The Sequoia YMCA is committed to strengthening and enriching the development of youth, adults, families and communities.</p>
 <br>
 <ul>
-<li><a href="/our_work/foster_youth.html" target="_blank">Salud America</a></li>
+<li><a href="/our_work/saludamerica.html" target="_blank">Salud America</a></li>
 </ul>
 <br>
 
@@ -306,7 +306,7 @@ A B C D E F G <a href="#H">H</a> I J K L M N O <a href="#P">P</a> Q R <a href="#
 <p>Stanford's Center for Education Policy Analysis (CEPA), a new independent research center, unites an interdisciplinary array of nationally prominent scholars from across the campus to provide the depth and scale of research needed to affect education policy in meaningful ways.</p>
 <br>
 <ul>
-<li><a href="/our_work/foster_youth.html" target="_blank">San Francisco Research Consortium</a> </li>
+<li><a href="/our_work/sfrc.html" target="_blank">San Francisco Research Consortium</a> </li>
 </ul>
 <br>
 
@@ -314,7 +314,7 @@ A B C D E F G <a href="#H">H</a> I J K L M N O <a href="#P">P</a> Q R <a href="#
 <p>StarVista is a non-profit organization dedicated to transforming the lives of children, young people, adults, and families across San Mateo County. Recognizing that building strong and healthy communities begins with helping each person to develop their own path of personal growth, StarVista has provided a wide variety of high-quality programs for more than 30 years.</p>
 <br>
 <ul>
-<li><a href="/our_work/foster_youth.html" target="_blank">Sequoia High School Teen Resource Center</a></li>
+<li><a href="/our_work/strc.html" target="_blank">Sequoia High School Teen Resource Center</a></li>
 </ul>
 <br>
 
@@ -323,7 +323,7 @@ A B C D E F G <a href="#H">H</a> I J K L M N O <a href="#P">P</a> Q R <a href="#
 <p>The Mission of Teen Talk Sexuality Education (TTSE) is to provide science-based comprehensive educational programs to youth and adults to help teens make the healthy choices that will result in lower rates of teen pregnancy and STD/HIV in the community.</p>
 <br>
 <ul>
-<li><a href="/our_work/foster_youth.html" target="_blank">Sequoia High School Teen Resource Center</a></li>
+<li><a href="/our_work/strc.html" target="_blank">Sequoia High School Teen Resource Center</a></li>
 </ul>
 <br>
 
