--- a/partners/content-national.html
+++ b/partners/content-national.html
@@ -5,97 +5,103 @@
         <div class="jgc-content-feature-item-left">
         <h1 class="title-page-header-big">National Partners</h1>
 <br>
-A B C D E F G H I J K L M N O <a href="#P">P</a> Q R S T U V W X Y Z
+<a href="#A" class="header-link">A</a> | <a href="#D"  class="header-link">D</a> | E - H | <a href="#I"  class="header-link">I</a> | J - L | <a href="#M"  class="header-link">M</a> | <a href="#N"  class="header-link">N</a> | O | <a href="#P"  class="header-link">P</a> | Q - R | <a href="#S"  class="header-link">S</a> | T - Z
 <br><br>
 
-<a class="header-link" href=" http://annenberginstitute.org/">Annenberg Institute for School Reform </a><br>
+<a name="A"></a>
+<a class="header-link" href=" http://annenberginstitute.org/" target="_blank">Annenberg Institute for School Reform </a><br>
 <p>The Annenberg Institute for School Reform at Brown University is a national policy-research and reform support organization that promotes quality education for all children, especially in urban communities. The Institute's primary lines of inquiry include college readiness, extended learning, and school transformation. The Annenberg Institute’s mission is “to develop, share, and act on knowledge that improves the conditions and outcomes of schooling in America, especially in urban communities and in schools serving disadvantaged children.” The Institute’s values are embodied in four Core Principles that emphasize results, equity, community, and learning.</p>
 <br>
 <ul>
-<li><a href="/our_work/cris.html">College Readiness Indicators Systems (CRIS)</a></li>
+<li><a href="/our_work/cris.html" target="_blank" >College Readiness Indicators Systems (CRIS)</a></li>
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.dallasisd.org">Dallas Independent School District</a><br>
+<a name="D"></a>
+<a class="header-link" href=" http://www.dallasisd.org" target="_blank">Dallas Independent School District</a><br>
 <p>The Dallas Independent School District is proud of its award-winning schools, its outstanding teachers and staff, hard-working students and committed parents and volunteers.We are the 14th largest school district in the nation with a diverse population of more than 157,000 students. Serving these students are more than 20,000 employees, making the Dallas ISD one of the largest employers in the city.</p>
 <br>
 <ul>
-<li><a href="/our_work/cris.html">College Readiness Indicators Systems (CRIS)</a></li>
+<li><a href="/our_work/cris.html" target="_blank">College Readiness Indicators Systems (CRIS)</a></li>
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.communityschools.org/">Institute for Educational Leadership-Coalition for Community Schools</a><br>
+<a name="I"></a>
+<a class="header-link" href=" http://www.communityschools.org/" target="_blank">Institute for Educational Leadership-Coalition for Community Schools</a><br>
 <p>The Coalition for Community Schools, housed at the Institute for Educational Leadership, is an alliance of national, state and local organizations in education K-16, youth development, community planning and development, family support, health and human services, government and philanthropy as well as national, state and local community school networks. Community schools are both a place and a set of partnerships between the school and other community resources. There are a number of national models and local community school initiatives that share a common set of principles: fostering strong partnerships, sharing accountability for results, setting high expectations, building on the community’s strengths, and embracing diversity and innovative solutions.</p>
 <br>
 <ul>
-<li><a href="/our_work/ece.html">Early Childhood Education Linkages</a></li>
+<li><a href="/our_work/ece.html" target="_blank">Early Childhood Education Linkages</a></li>
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.mathematica-mpr.com/">Mathematica Policy Research</a><br>
+<a name="M"></a>
+<a class="header-link" href=" http://www.mathematica-mpr.com/" target="_blank">Mathematica Policy Research</a><br>
 <p>Mathematica Policy Research is dedicated to improving public well-being by bringing the highest standards of quality, objectivity, and excellence to bear on information collection and analysis for our partners and clients. The company has been at the forefront of assessing the effectiveness of policies and programs since 1968.</p>
 <br>
 <ul>
-<li><a href="/our_work/playworks.html">Playworks II Randomized Control Trial</a></li>
+<li><a href="/our_work/playworks.html" target="_blank">Playworks II Randomized Control Trial</a></li>
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.summerlearning.org/">National Summer Learning Association</a><br>
+<a name="N"></a>
+<a class="header-link" href=" http://www.summerlearning.org/" target="_blank">National Summer Learning Association</a><br>
 <p>The vision of the National Summer Learning Association is for every child to be safe, healthy, and engaged in learning during the summer. To realize that vision, our mission is to connect and equip schools and community organizations to deliver quality summer learning programs to our nation’s youth to help close the achievement gap and support healthy development.</p>
 <br>
 <ul>
-<li><a href="/our_work/pps.html">Summer Dreamers' Academy Evaluation - Pittsburgh Public Schools</a></li>
+<li><a href="/our_work/pps.html" target="_blank">Summer Dreamers' Academy Evaluation - Pittsburgh Public Schools</a></li>
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.newvisions.org/">New Visions for Public Schools - New York</a><br>
+<a class="header-link" href=" http://www.newvisions.org/" target="_blank">New Visions for Public Schools - New York</a><br>
 <p>At New Visions, we’re committed to demonstrating that mass numbers of low-income, urban students can graduate from high school fully prepared for a competitive world. At our network of 76 New York City public schools, we work to define and implement innovative strategies that make success more likely for our neediest students. By strengthening curriculum and empowering teachers who are willing to take chances and be accountable for outcomes, we build capacity within schools to make success possible and sustainable.</p>
 <br>
 <ul>
-<li><a href="/our_work/cris.html">College Readiness Indicators Systems (CRIS)</a></li>
+<li><a href="/our_work/cris.html" target="_blank">College Readiness Indicators Systems (CRIS)</a></li>
 </ul>
 <br>
+
 <a name="P"></a>
-<a class="header-link" href=" http://www.pghboe.net/">Pittsburgh Public Schools</a><br>
+<a class="header-link" href=" http://www.pghboe.net/" target="_blank">Pittsburgh Public Schools</a><br>
 <p>The Pittsburgh Public Schools will be one of America’s premier school districts, student-focused, well-managed, and innovative. We will hold ourselves accountable for preparing all children to achieve academic excellence and strength of character, so that they have the opportunity to succeed in all aspects of life.</p>
 <br>
 <ul>
-<li><a href="/our_work/cris.html">College Readiness Indicators Systems (CRIS)</a></li>
-<li><a href="/our_work/pps.html">Summer Dreamers' Academy Evaluation - Pittsburgh Public Schools</a></li>
+<li><a href="/our_work/cris.html" target="_blank">College Readiness Indicators Systems (CRIS)</a></li>
+<li><a href="/our_work/pps.html" target="_blank">Summer Dreamers' Academy Evaluation - Pittsburgh Public Schools</a></li>
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.playworks.org/">PlayWorks</a><br>
+<a class="header-link" href=" http://www.playworks.org/" target="_blank">PlayWorks</a><br>
 <p>Playworks supports play at hundreds of schools across the country, helping to transform recess into a tool to support learning. Our coaches become part of the school family, getting to know the students and staff and helping to make the playground a virtual classroom where students learn teamwork, conflict resolution, creative problem solving and other life lessons that stretch beyond traditional classroom activities. The result is a stronger learning community and a more positive educational environment.</p>
 <br>
 <ul>
-<li><a href=/our_work/playworks".html">Playworks I</a></li>
-<li><a href="/our_work/playworks".html">Playworks II Randomized Control Trial</a></li>
+<li><a href=/our_work/playworks".html" target="_blank">Playworks I</a></li>
+<li><a href="/our_work/playworks.html" target="_blank">Playworks II Randomized Control Trial</a></li>
 </ul>
 <br>
 
-
-<a class="header-link" href=" http://www.sjusd.org/">San Jose Unified School District</a><br>
+<a name="S"></a>
+<a class="header-link" href=" http://www.sjusd.org/" target="_blank">San Jose Unified School District</a><br>
 <p>The San Jose Unified School District commits to inspire and prepare all students to succeed in a global economy. </p>
 <br>
 <ul>
-<li><a href="/our_work/cris.html">College Readiness Indicators Systems (CRIS)</a></li>
+<li><a href="/our_work/cris.html" target="_blank">College Readiness Indicators Systems (CRIS)</a></li>
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.phila.k12.pa.us">School District of Philadelphia</a><br>
+<a class="header-link" href=" http://www.phila.k12.pa.us" target="_blank">School District of Philadelphia</a><br>
 <p>The School District of Philadelphia is the eighth largest school district in the nation, by enrollment. Located in a historic and culturally rich setting, we are a racially and ethnically diverse community committed to education. The mission of the School District of Philadelphia is to provide a high-quality education that prepares, ensures, and empowers all students to achieve their full intellectual and social potential in order to become lifelong learners and productive members of society. </p>
 <br>
 <ul>
-<li><a href="/our_work/cris.html">College Readiness Indicators Systems (CRIS)</a></li>
+<li><a href="/our_work/cris.html" target="_blank">College Readiness Indicators Systems (CRIS)</a></li>
 </ul>
 <br>
 
-<a class="header-link" href=" http://www.ussoccerfoundation.org">US Soccer Foundation</a><br>
+<a class="header-link" href=" http://www.ussoccerfoundation.org" target="_blank">US Soccer Foundation</a><br>
 <p>The mission of the U.S. Soccer Foundation is to enhance, assist and grow the sport of soccer in the United States with a special emphasis on underserved communities. We view soccer as a powerful vehicle for social change.  By supporting the development of places to play, places to grow and places to learn, our goal is to ensure that children in underserved communities have easy and affordable access to quality soccer programs that support their physical and personal development.</p>
 <br>
 <ul>
-<li><a href="/our_work/soccer.html">Soccer for Success</a></li>
+<li><a href="/our_work/soccer.html" target="_blank">Soccer for Success</a></li>
 </ul>
 
          </div>
