--- a/partners/content-partner_list.html
+++ b/partners/content-partner_list.html
@@ -10,9 +10,9 @@
 
 	<h1 class="content-text-header">A</h1><br>
 		<ul style="list-style: none;">
-		<li>Advocates for Children, San Mateo County</li>
-		<li>Alameda County Health Care Services Agency</li>
-		<li>Annenberg Institute for School Reform</li>
+		<li><a href=" http://advocatesfc.org/" target="_blank">Advocates for Children, San Mateo County</a></li>
+		<li><a href=" http://www.acgov.org/health/" target="_blank">Alameda County Health Care Services Agency</a></li>
+		<li><a href=" http://annenberginstitute.org/" target="_blank">Annenberg Institute for School Reform</a></li>
 		</ul>
 		<hr class="short-rule">
 
@@ -21,10 +21,10 @@
 
            <h1 class="content-text-header">C</h1>
 		<ul style="list-style: none;">
-		<li>California School Health Centers Association</li>
-		<li>Center for Community School Partnerships</li>
-		<li>Center for Strategic Community Innovation</li>
-		<li>City College of San Francisco</li>
+		<li><a href="http://www.schoolhealthcenters.org/" target="_blank">California School Health Centers Association</a></li>
+		<li><a href=" http://education.ucdavis.edu/community-school-partnerships" target="_blank">Center for Community School Partnerships</a></li>
+		<li><a href=" http://ccinnovation.org/" target="_blank">Center for Strategic Community Innovation</a></li>
+		<li><a href=" http://www.ccsf.edu/" target="_blank">City College of San Francisco</a></li>
 		</ul><br>
 	   <hr class="short-rule">
 	   
@@ -33,8 +33,8 @@
 	   
 	  <h1 class="content-text-header">H</h1>
 		<ul style="list-style: none;">
-			<li>Hatchuel, Tabernik and Associates</li>
-			<li>Human Services Agency of San Mateo County</li>
+			<li><a href=" http://www.htaconsulting.com/" target="_blank">Hatchuel, Tabernik and Associates</a></li>
+			<li><a href=" http://www.co.sanmateo.ca.us/portal/site/humanservices" target="_blank">Human Services Agency of San Mateo County</a></li>
 		</ul><br>
 	  <hr class="short-rule">
 
@@ -43,14 +43,14 @@
 
            <h1 class="content-text-header">N</h1>
 		<ul style="list-style: none;">
-			<li>New Day for Learning</li>
-			<li>New Visions for Public Schools</li>
+			<li><a href=" http://www.newdayforlearning.org/" target="_blank">New Day for Learning</a></li>
+			<li><a href=" http://www.newvisions.org/" target="_blank">New Visions for Public Schools</a></li>
 		</ul><br>
 <hr class="short-rule">
 
 	   <h1 class="content-text-header">O</h1>
 		<ul style="list-style: none;">
-			<li>Oakland Kids First</li>
+			<li><a href=" http://www.kidsfirstoakland.org/" target="_blank">Oakland Kids First</a></li>
 		</ul><br>
 <hr class="short-rule">
 
@@ -67,25 +67,24 @@
 
 <h1 class="content-text-header">P</h1>
 		<ul style="list-style: none;">
-		<li>Partnership for Children and Youth</li>
-		<li>Peninsula Community Foundation</li>
-		<li>Pittsburgh Public Schools</li>
+		<li><a href=" http://partnerforchildren.org/" target="_blank">Partnership for Children and Youth</a></li>
+		<li><a href="http://www.siliconvalleycf.org/content/history-peninsula-community-foundation" target="_blank">Peninsula Community Foundation</a></li>
+		<li><a href=" http://www.pghboe.net/" target="_blank">Pittsburgh Public Schools</a></li>
 		</ul><br>
 <hr class="short-rule">
 	   <h1 class="content-text-header">R</h1>
 		<ul style="list-style: none;">
-		<li>Redwood City 2020</li>
-		<li>Redwood City School District</li>
+		<li><a href=" http://www.rwc2020.org/" target="_blank">Redwood City 2020</a></li>
+		<li><a href=" http://www.rcsd.k12.ca.us/" target="_blank">Redwood City School District</a></li>
 		</ul><br>
 <hr class="short-rule">
            <h1 class="content-text-header">S</h1>
 		<ul style="list-style: none;">
-			<li>San Francisco Foundation</li>
-<li>San Francisco Mayor's Office</li>
-<li>San Francisco Unified School District</li>
-<li>San Jose Unified School District</li>
-<li>San Mateo County Office of Education</li>
-<li>Sequoia Unified School District</li>
+			<li><a href=" http://www.sff.org/about" target="_blank">San Francisco Foundation</a></li>
+<li><a href=" http://www.sfmayor.org/" target="_blank">San Francisco Mayor's Office</a></li>
+<li><a href=" http://www.sfusd.edu/" target="_blank">San Francisco Unified School District</a></li>
+<li><a href=" http://www.sjusd.org/" target="_blank">San Jose Unified School District</a></li>
+<li><a href=" http://www.smcoe.k12.ca.us/" target="_blank">San Mateo County Office of Education</a></li>
 		</ul><br>
 <hr class="short-rule">
 
