--- a/our_work/content-leadership_capacity.html
+++ b/our_work/content-leadership_capacity.html
@@ -7,19 +7,19 @@
 
 <br>
 <ul style="list-style: none;">
-<li><a href=".html">Community Schools Resource Initiative (CSRI)</a></li>
+<li><a href="csri.html">Community Schools Resource Initiative (CSRI)</a></li>
 
-<li><a href=".html">East Palo  Alto Mapping Usability Study</a></li>
+<li><a href="mapping.html">East Palo  Alto Mapping Usability Study</a></li>
 
-<li><a href=".html">East Palo Alto Youth Art & Music Center</a></li>
+<li><a href="youth_art_music.html">East Palo Alto Youth Art & Music Center</a></li>
 
-<li><a href=".html">Redwood City-North Fair Oaks Prevention Partnership</a></li>
+<li><a href="prevention_partnership.html">Redwood City-North Fair Oaks Prevention Partnership</a></li>
 
-<li><a href=".html">San Francisco Research Consortium </a></li>
+<li><a href="research_consortium.html">San Francisco Research Consortium </a></li>
 
-<li><a href=".html">Youth Engaged in Leadership and Learning (YELL)</a></li>
+<li><a href="yell.html">Youth Engaged in Leadership and Learning (YELL)</a></li>
 
-<li><a href=".html">Youth in the Middle (YiM)</a></li>
+<li><a href="yim.html">Youth in the Middle (YiM)</a></li>
 </ul>
          </div>
 
