additional content added

--- a/our_work/content-bts.html
+++ b/our_work/content-bts.html
@@ -6,6 +6,29 @@
 <h1 class="title-page-header-big">San Francisco’s Bridge to Success (BtS)</h1>
 <br>
 
+<aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+<ul>
+<li>San Francisco Mayor's Office</li>
+<li>City College of San Francisco</li>
+<li>San Francisco Unified School District</li>
+</ul>
+<br>
+
+      <h1 class="content-text-header">Publications</h1>
+<ul>
+<li><a href="/resources/publications/JGC_SS_SFUSDPostSecondaryTransition2011.pdf" class="link-no-underline" target="_blank">Secondary to Postsecondary Transitions for Youth in San Francisco Unified School District</a></li>
+<li><a href="/resources/publications/JGC_IB_SFUSDEarlyWarningIndicators2011.pdf" class="link-no-underline" target="_blank">Developing Early Warning Indicators for the San Francisco Unified School District</a></li>
+<li><a href="/resources/publications/JGC_IB_SFUSDMathArticulation2011.pdf" class="link-no-underline" target="_blank">Math Articulation Between the San Francisco Unified School District and the City College of San Francisco</a></li>
+</ul>
+
+    
+    </div> <!--end right side box div-->
+    </aside>
+
+
       <p>San Francisco’s Bridge to Success (BtS) initiative brings together the City and County of San Francisco, the San Francisco Unified School District (SFUSD), the City College of San Francisco (CCSF), and key community organizations to promote postsecondary success for underrepresented students. The goals of the partnership are to create shared ownership of the responsibility for postsecondary attainment and to build a coordinated strategy to define on the ground changes needed to make a real difference in the lives of youth. To help achieve these goals, the Youth Data Archive (YDA) provides quantitative research and analytic support to assist BtS partners to make informed policy or programmatic changes designed to improve youth outcomes.</p>
          </div>
 
