--- a/our_work/content-cris.html
+++ b/our_work/content-cris.html
@@ -4,8 +4,25 @@
 
         <div class="jgc-content-feature-item-left">
 <h1 class="title-page-header-big">Tri-Level College Readiness Indicator Systems (CRIS)</h1>
-
  <br>
+
+
+    <aside>
+    <div class="right-side-box">
+  <h1 class="content-text-header">Partner Organizations</h1>
+
+   <ul>
+<li>Annenberg Institute for School Reform </li>
+<li>Dallas Independent School District</li>
+<li>New Visions for Public Schools - New York</li>
+<li>Pittsburgh Public Schools</li>
+<li>San Jose Unified School District</li>
+<li>School District of Philadelphia</li>
+</ul>
+    </div> <!--end right side box div-->
+    </aside>
+
+
 
 <p>Education leaders across the country are confounded by a growing phenomenon:  too many students are not college ready when they leave high school.  Although indicators exist to identify students at-risk of dropping out of high school, few indicators of students’ college readiness are currently in place, and few districts have linked indicators to practices and policies in ways that would enable action to create meaningful, lasting change. </p>
 
