--- a/our_work/content-csri.html
+++ b/our_work/content-csri.html
@@ -6,6 +6,24 @@
 <h1 class="title-page-header-big">Community School Resource Initiative (CSRI)</h1>
 <br>
 
+
+    <aside>
+    <div class="right-side-box">
+  <h1 class="content-text-header">Partner Organizations</h1>
+
+<ul>
+<li>Partnership for Children and Youth</li>
+<li>Alameda County Health Care Services Agency</li>
+<li>California School Health Centers Association</li>
+<li>Center for Community School Partnerships</li>
+<li>Center for Strategic Community Innovation</li>
+<li>Hatchuel, Tabernik and Associates</li>
+<li>New Day for Learning</li>
+<li>San Francisco Foundation</li>
+</ul>
+    </div> <!--end right side box div-->
+    </aside>
+
 <span class="content-bold">Goal</span>
 <p>Initiated in 2010 with the generous support of The Stuart Foundation, the Community School Resource Initiative (CSRI) aims to offer emerging and developing community schools with high-quality information about effective practices and access to current research related to community schools. Sessions for CSRI will emphasize data use and evaluation through the Youth Data Archive (YDA), JGC's initiative that enables cross-sector youth data analysis. The CSRI will also engage the primary community school intermediaries in the Bay Area in a series of convenings to determine how to jointly develop a comprehensive system of supports for community schools in the Bay Area and beyond.</p>
 <br>
