--- a/our_work/content-ece.html
+++ b/our_work/content-ece.html
@@ -7,6 +7,16 @@
 
 <br>
 
+    <aside>
+    <div class="right-side-box">
+  <h1 class="content-text-header">Partner Organizations</h1>
+
+<ul>
+<li>Institute for Educational Leadership-Coalition for Community Schools</li>
+</ul>
+    </div> <!--end right side box div-->
+    </aside>
+
 <p>The Early Childhood and Community Schools Linkages Project addresses the lack of collaboration and continuity across Early Childhood Education (ECE) programs and elementary schools by linking ECE programs with Community Schools. Since 2009, three regions (Multnomah County, OR; Albuquerque, NM; and Tulsa, OK) have been developing models to demonstrate that community schools are effective vehicles for promoting continuity between ECE and elementary school.</p>
 
 <br>
