--- a/our_work/content-foster_youth.html
+++ b/our_work/content-foster_youth.html
@@ -7,6 +7,21 @@
 
  <br>
 
+ <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+<ul>
+<li>Advocates for Children, San Mateo County</li>
+<li>Human Services Agency of San Mateo County</li>
+<li>Peninsula Community Foundation</li>
+<li>Redwood City School District</li>
+<li>Sequoia Unified School District</li>
+</ul> 
+    
+    </div> <!--end right side box div-->
+    </aside>
+
 <p>Dependent youth—those placed under custody of the court due to parental abuse or neglect—face many educational challenges.  First, changes in placements may cause disruptions in schooling that can hurt educational attainment.  Additionally, evidence suggests that a variety of factors, such as the stress of court appearances, separation from siblings and parents, the stigma associated with being in foster care, and trauma from the abuse or neglect that led to removal from the parents’ custody detract from students’ ability to concentrate on school work and can lead to behavioral problems.  Although there is limited research on school experiences for dependent youth, the existing research shows that outcomes are expectedly poor given the difficulties dependent youth face.   The lack of research on educational outcomes for dependent youth stems from the fact that tracking these educational outcomes is complicated due to frequent changes in placements and schools for youth in the foster care system and inconsistent procedures for sharing records across agencies when placement changes occur.</p>
 
 <br>
