--- a/our_work/content-healthyschools.html
+++ b/our_work/content-healthyschools.html
@@ -4,8 +4,19 @@
 
         <div class="jgc-content-feature-item-left">
  <h1 class="title-page-header-big">A Study of the Sequoia Healthcare District’s Healthy Schools Initiative</h1>
-
 <br>
+
+<aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+<ul>
+<li>Sequoia Health Care District</li>
+</ul>
+    
+    </div> <!--end right side box div-->
+    </aside>
+
 
 <span class="content-bold">Overview</span>
 
