--- a/our_work/content-mapping.html
+++ b/our_work/content-mapping.html
@@ -7,6 +7,22 @@
 
 <br>
 
+ <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+
+    <ul>
+<li>Built to Last Collaborative</li>
+<li>Community Development Institute </li>
+<li>Live in Peace</li>
+<li>Nuestra Casa</li>
+<li>One East Palo Alto</li>
+<li>Youth Community Service</li>
+</ul>
+    </div> <!--end right side box div-->
+    </aside>
+
 <span class="content-bold">Introduction</span> 
 <br>
 <p> Representatives from the Built to Last Collaborative, the Community Development Institute, For Youth By Youth, Nuestra Casa, OneEPA, and Youth Community Services, have joined together with the John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University to map the out-of-school time (OST) opportunities available to East Palo Alto youth.  This project will bring together information on the landscape of OST opportunities available for EPA youth, with the goal of increasing access to and awareness of services for youth and providers.  </p>
