--- a/our_work/content-motivation.html
+++ b/our_work/content-motivation.html
@@ -7,6 +7,18 @@
 <h1 class="title-page-header-big">Youth Development Practices and Motivation Project</h1>
 <br>
 
+ <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+<ul>
+<li>Redwood City School District</li>
+</ul> 
+    
+    </div> <!--end right side box div-->
+    </aside>
+
+
 <p>Since 2009, the JGC has worked in partnership with the Redwood City School District to better understand middle school students’ classroom experiences. 
  In particular, this study focuses on students’ perceptions of classroom practices in relation to their motivational beliefs, engagement and achievement outcomes.  
 Over the past three years, JGC researchers have collected survey data from all middle school students in the Redwood City School District.  
