--- a/our_work/content-okf.html
+++ b/our_work/content-okf.html
@@ -7,6 +7,18 @@
 
 <br>
 
+ <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organization</h1>
+
+    <ul>
+<li>Oakland Kids First</li>
+</ul>
+    </div> <!--end right side box div-->
+    </aside>
+
+
 <p>Oakland Kids First (OKF) is an organization with more than a decade-long commitment to creating meaningful leadership opportunities for young people to transform their schools and communities so all youth graduate with the skills and motivation to reach their dreams. In 2005, OKF youth leaders initiated and created PASS-2, a peer academic support program designed to provide needed support for entering high school students by tapping older students as peer educators and mentors. The goal of the program is two-fold: to improve academic achievement of all student participants and to promote a school culture that fosters positive youth development, including meaningful youth engagement, positive relationships, and a culture of academic success. </p>
 
 <br>
