--- a/our_work/content-pfa.html
+++ b/our_work/content-pfa.html
@@ -7,6 +7,18 @@
 
 <br>
 
+ <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+<ul>
+<li>Redwood City School District</li>
+<li>San Mateo County Office of Education</li>
+</ul>
+    
+    </div> <!--end right side box div-->
+    </aside>
+
 <span class="content-bold"> Research Topic: </span><br>
 
 <p> At the request of partners in the Youth Data Archive (YDA), the John W. Gardner Center for Youth and Their Communities are updating an analysis done in 2010 linking data from youth who participated in the San Mateo County Office of Education (SMCOE) Preschool for All (PFA) program and enrolled in Redwood City School District (RCSD) thereafter.  The 2010 YDA report followed PFA participants through the end of kindergarten, 1st, and 2nd grade to see how closely PFA trajectories follow those of other RCSD students. The updated report will be able to strengthen the results for PFA participants in 1st and 2nd grade, and follow one cohort into 3rd grade. </p>
