--- a/our_work/content-playworks.html
+++ b/our_work/content-playworks.html
@@ -6,7 +6,18 @@
    <h1 class="title-page-header-big">Playworks</h1>
 <br>
 
- 
+ <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+<ul>
+<li>PlayWorks</li>
+<li>Mathematica Policy Research</li>
+</ul>
+    
+    </div> <!--end right side box div-->
+    </aside>
+
 
 <h1 class="content-text-header">Implementation of Playworks in Eight Bay Area Schools</h1>
 <p>With funding from the Robert Wood Johnson Foundation, JGC conducted a qualitative study of the implementation of Playworks at eight Bay Area schools. Playworks is a national recess-based program that incorporates positive youth development themes and physical activity to improve the quality of play and conflict resolution during recess so that students can re-enter class ready to learn. The study documented the school contexts and Playworks practices that led to high quality implementation across schools and discussed the challenges that schools faced in implementing the program.</p>
