--- a/our_work/content-research_consortium.html
+++ b/our_work/content-research_consortium.html
@@ -3,7 +3,20 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
-          
+          <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+
+    <ul>
+<li>City College of San Francisco</li>
+<li>San Francisco Mayor's Office</li>
+<li>San Francisco Unified School District</li>
+<li>Stanford University Center for Education Policy Analysis (CEPA)</li>
+</ul>
+    </div> <!--end right side box div-->
+    </aside>
+ 
 
 <h1 class="title-page-header-big">The San Francisco Research Consortium</h1>
 <br>
