--- a/our_work/content-saludamerica.html
+++ b/our_work/content-saludamerica.html
@@ -8,7 +8,20 @@
 A Project of Salud America!</h1>
 <br>
 
+<aside>
+    <div class="right-side-box">
 
+      <h1 class="content-text-header">Partner Organizations</h1>
+
+    <ul>
+<li>Boys and Girls Clubs of the Peninsula</li>
+<li>California School Boards Association</li>
+<li>Redwood City School District</li>
+<li>Riekes Center</li>
+<li>Sequoia YMCA</li>
+</ul>
+    </div> <!--end right side box div-->
+    </aside>
 
  
 
