--- a/our_work/content-truancy.html
+++ b/our_work/content-truancy.html
@@ -8,6 +8,23 @@
 
 <br>
 
+ <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+
+    <ul>
+<li>Redwood City 2020</li>
+<li>Redwood City Policy Department</li>
+<li>Redwood City School District </li>
+<li>San Mateo County Health System</li>
+<li>San Mateo County Human Services Agency</li>
+<li>Sequioia Union High School District</li>
+</ul>
+    </div> <!--end right side box div-->
+    </aside>
+
+
 <span class="content-bold">Research Topic </span>
 
 <br>
