--- a/our_work/content-youth_art_music.html
+++ b/our_work/content-youth_art_music.html
@@ -5,7 +5,17 @@
         <div class="jgc-content-feature-item-left">
            <h1 class="title-page-header-big">East Palo Alto Youth Art and Music Center: Community Assessment and Engagement </h1>
 
- 
+  <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+<ul>
+<li>Live in Peace</li>
+</ul>
+    
+    </div> <!--end right side box div-->
+    </aside>
+
 
 <br>
 
