--- a/our_work/content-english_learner.html
+++ b/our_work/content-english_learner.html
@@ -7,6 +7,17 @@
 
 <br>
 
+ <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+<ul>
+<li>Redwood City School District</li>
+</ul>
+    
+    </div> <!--end right side box div-->
+    </aside>
+
 
 <p>This study examined English learning in an after school setting among students whose primary language was not English. Focusing on a large after school provider and one school district in the San Francisco Bay Area, we examined the determinants of program participation among native and non-native English speakers and the effects of participation on English language development as measured by the California English Language Development Test (CELDT). Findings indicated that students attending the program, particularly at higher levels of attendance, had greater rates of gain in the listening and speaking portions of the CELDT, but they were not redesignated as English proficient in school sooner than other non-attending students. Our results point to the need for increased examination of the link between in-school and out-of school activities in relation to English language acquisition among youth.<p>
 
