--- a/our_work/content-fitness_achievement.html
+++ b/our_work/content-fitness_achievement.html
@@ -6,6 +6,17 @@
    <h1 class="title-page-header-big">Fitness and Academic Achievement in Redwood City</h1>
 <br>
 
+ <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+
+    <ul>
+<li>Redwood City School District</li>
+</ul>
+    </div> <!--end right side box div-->
+    </aside>
+
 <p>Community partners from the Redwood City School District (RCSD), Sequoia Union High School District (SUHSD), San Mateo County Health Department, and San Mateo County Human Services Agency (HSA) requested an analysis to understand health disparities in the community.  Researchers with the Youth Data Archive (YDA) asked the following questions using longitudinal data on Physical Fitness Test (PFT) and California Standards Test (CST) results: (1) What are the fitness pathways for different demographic groups of youth? (2) What is the relationship between physical fitness and academic achievement over time?  Analyses found a positive relationship between PFT performance and CST scores in math and English language arts.  Tracking individual students across four academic years, analyses showed that students with consistently higher levels of fitness had higher CST scores, on average, compared to students with consistently lower fitness levels.  Students whose fitness improved over time also had higher CST scores than those whose fitness declined.</p>
 
  
