--- a/our_work/content-soccer.html
+++ b/our_work/content-soccer.html
@@ -6,6 +6,22 @@
            
 <h1 class="title-page-header-big">Soccer for Success</h1>
 <br>
+
+ <aside>
+    <div class="right-side-box">
+
+      <h1 class="content-text-header">Partner Organizations</h1>
+
+    <ul>
+<li>US Soccer Foundation</li>
+</ul>
+
+
+    </div> <!--end right side box div-->
+    </aside>
+
+
+
 <p>Soccer for Success is a U.S. Soccer Foundation after‐school program that uses soccer to promote positive outcomes for children in low‐income urban communities. This small‐scale study focused on Soccer for Success as implemented by the United Soccer Club (USC), the organization that runs Soccer for Success in Washington, DC. The research aimed to understand how the program is implemented and to uncover key conditions that facilitate or hinder the program’s ability to reach its goals. It employed a mixed methods design, including observations, interviews, focus group interviews, and student surveys, as well as specific measures of student outcomes. The findings
 
 strongly suggest that Soccer for Success holds potential to fulfill its goals of preventing or curbing childhood obesity and juvenile delinquency among disadvantaged children in urban communities – communities deeply impacted by poverty and characterized by a scarcity of quality programs and services that promote the well‐being of their children and youth.</p>
